--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700,900&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    <div id="notification-container"></div>
     <div id="loadingScreen">
         <div class="loader-content">
             <div class="loader-logo">🧬</div>
@@ -55,6 +55,10 @@
             <h1>🔬 Ciencias Naturales 🧪</h1>
             <p>Plataforma de Minijuegos Educativos</p>
         </header>
+            <div class="community-buttons">
+                <button id="leaderboardBtn" class="btn btn-secondary">🏆 Leaderboard</button>
+                <button id="staffBtn" class="btn btn-secondary">👥 Staff</button>
+            </div>
         <div class="login-form">
             <h2>Iniciar Sesión</h2>
             <div class="form-group">
@@ -93,6 +97,12 @@
             <span class="minecoins-amount" id="userCoins">0</span>
             <span class="mine-b-label">Minecoins</span>
         </div>
+        
+        <div class="community-buttons">
+            <button id="leaderboardBtn" class="btn btn-secondary">🏆 Leaderboard</button>
+            <button id="staffBtn" class="btn btn-secondary">👥 Staff</button>
+        </div>
+
         <div id="gamesContainer" class="games-section fadein">
             </div>
     </section>
@@ -122,6 +132,69 @@
         <div class="modal-content">
             <span id="closeGameBtn" class="close-btn">&times;</span>
             <div id="gameContent"></div>
+        </div>
+    </div>
+
+    <div id="lockedGameModal" class="game-modal">
+        <div class="modal-content" style="border-color: var(--color-warning-glow); box-shadow: var(--shadow-glow-warning);">
+            <span id="closeLockedGameBtn" class="close-btn">&times;</span>
+            <div style="text-align: center;">
+                <div style="font-size: 4em; color: var(--color-warning-glow); text-shadow: 0 0 15px var(--color-warning-glow); margin-bottom: 20px;">
+                    ⚠️
+                </div>
+                <h2 style="color: var(--color-warning-glow); font-family: var(--font-display);">
+                    MISIÓN BLOQUEADA
+                </h2>
+                <p style="font-size: 1.1em; margin-top: 15px;">
+                    Nuestros registros indican que ya has completado este desafío con éxito. ¡Tu puntaje ha sido guardado!
+                </p>
+                <p style="color: #ccc; margin-top: 20px; font-size: 0.9em;">
+                    Si quieres volver a intentarlo, habla con la Profesora o con el Staff para que reinicie tu progreso en este juego.
+                </p>
+            </div>
+        </div>
+    </div>
+
+        <div id="leaderboardModal" class="game-modal">
+        <div class="modal-content">
+            <span id="closeLeaderboardBtn" class="close-btn">&times;</span>
+            <h2 style="font-family: var(--font-display); color: var(--color-primary-glow); text-align: center;">🏆 TABLA DE LÍDERES 🏆</h2>
+            <p style="text-align: center; color: #ccc; margin-bottom: 30px;">Filas con la mayor cantidad de Minecoins</p>
+            <div id="leaderboardContent">
+                </div>
+        </div>
+    </div>
+
+    <div id="staffModal" class="game-modal">
+        <div class="modal-content">
+            <span id="closeStaffBtn" class="close-btn">&times;</span>
+            <h2 style="font-family: var(--font-display); color: var(--color-secondary-glow); text-align: center;">👥 STAFF Y CREADORES 👥</h2>
+            <table class="staff-table">
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Rol</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Profe Da Chile</td>
+                        <td>Profesora</td>
+                    </tr>
+                    <tr>
+                        <td>Santino V.</td>
+                        <td>Alumno / Staff</td>
+                    </tr>
+                    <tr>
+                        <td>Dante G.</td>
+                        <td>Alumno / Staff</td>
+                    </tr>
+                    <tr>
+                        <td>Sanvy Corporation</td>
+                        <td>Desarrollador</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 
