--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
             <div id="filasManagement">
                 </div>
             <hr>
+            <h3>Gestión de Disponibilidad de Juegos</h3>
+                <div id="gameAvailabilityManagement">
+            </div>
             <div class="form-group">
                 <label>Acciones Globales:</label>
                 <div class="global-controls">
